--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -1,66 +1,54 @@
----
+<tbody id="productList"></tbody>
 
----
 <script>
-	fetch('http://localhost:3000/products')
-		.then(response => {
-			if (!response.ok) {
-				throw new Error('Network response was not OK');
-			}
-			return response.json();
-		})
-		.then(data => {
-			createProductList(data)
-		})
-		.catch((error) => {
-  			console.error('Error:', error);
-		});
+let index = 0
+function cycleClassNames(...classNames) {
+  value = classNames[index]
+  index = next_index()
+  return value
 
-	function createProductList(data) {
-		renderDiv = document.getElementById("productList")
-		data.forEach(productObject => console.log(productObject.title))
-	}
+  function next_index() {
+      return step_index(1)
+  }
+
+  function step_index(n) {
+      console.log("index:", index % classNames.length)
+      return (index + n) % classNames.length
+  }
+}
+
+fetch('http://localhost:3000/products')
+	.then(response => {
+		if (!response.ok) {
+			throw new Error('Network response was not OK');
+		}
+		return response.json();
+	})
+	.then(data => {
+		createProductView(data)
+	})
+	.catch((error) => {
+		console.error('Error:', error);
+	});
+
+function createProductView(data) {
+	productListDiv = document.getElementById("productList")
+	data.forEach(productObject => {
+		const productTableRow = document.createElement('div'); 
+		productTableRow.className = cycleClassNames("hi", "hello", "bye", "Goodbye")
+
+		const titleParagraph = document.createElement('p')
+		titleParagraph.textContent = productObject.title;
+
+		productTableRow.appendChild(titleParagraph);
+		productListDiv.appendChild(productTableRow);
+	})
+}
 </script>
-
-<!-- Instead of the Rails Notice feature, use some dynamic html based on the reponse's status -->
-
-<!-- Set your CSS up to use a scoped and utility css hybrid -->
-
-<div id="productList"></div>
-
-<!-- <table>
-	<tfoot>
-		<tr>
-			<td colspan="3">
-				<%= link_to 'New Product', new_product_path %>
-			</td>
-		</tr>
-	</tfoot>
-	<tbody>
-		<% @products.each do |product| %>
-			<tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-				<td class="image">
-					<%= image_tag(product.image_url, class: 'list_image') %>	
-				</td>
-				<td class="description">
-					<h1><%= product.title %></h1>
-					<p><%= truncate(strip_tags(product.description), length: 80) %></p>
-				</td>
-				<td class="actions">
-					<ul>
-						<li><%= link_to 'Show', product %></li>
-						<li><%= link_to 'Edit', edit_product_path(product) %></li>
-						<li><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-					</ul>
-				</td>
-			</tr>
-		<% end %>
-	</tbody>
-</table> -->
 
 <style lang="scss">
 .products {
-    margin: 0;
+	margin: 0;
     padding: 0.5em;
     a {
       padding: 0.354em 0.5em;
