--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,7 @@
 ---
 // Component Imports
-import Products from '../components/Products.astro';
-// You can import components from any supported Framework here!
+import Products from '../components/Products.vue';
 
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
 let title = 'My Astro Site';
 ---
 <html lang="en">
@@ -37,7 +32,7 @@ let title = 'My Astro Site';
 			</div>
 		</header>
 
-		<Products />
+		<Products client:load/>
 	</main>
 </body>
 </html>
