truncate function created

--- a/src/pages/create.astro
+++ b/src/pages/create.astro
@@ -1,6 +1,6 @@
 ---
 // Component Imports
-import Products from '../components/Products.vue';
+import ProductsCreate from '../components/ProductsCreate.vue';
 
 let title = 'Depot';
 ---
@@ -16,7 +16,7 @@ let title = 'Depot';
 </head>
 <body>
 	<main>
-		<Products client:load/>
+		<ProductsCreate />
 	</main>
 </body>
 </html>
