basic site up and running

--- a/src/pages/create.astro
+++ b/src/pages/create.astro
@@ -16,6 +16,7 @@ let title = 'Depot';
 </head>
 <body>
 	<main>
+		<p>Hello CREATE: {Astro.props.title}!</p>
 		<ProductsCreate />
 	</main>
 </body>
